# ca-analyzer

./: .gitignore  README.md  SPEC.md  debug_dpg.py  main.py  main_dpg.py  package-lock.json  package.json  requirements.txt  run_and_capture.bat  test_dpg.py  test_exe.bat  test_exe.ps1  test_launch.py  test_run.bat  test_serial.py
doc/: M5.architecture.md  M5.deployment.md  M5.prd.md  M5.test-report.md  M5.ui-design.html  M5.ui-design.md
src/: __init__.py  csv_exporter.py  display.html  display.js  display_window.py  index.html  main.js  main_window.py  measurement_controller.py  serial_protocol.py  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  serial.rs
